--- a/doc/introduction.docbook
+++ b/doc/introduction.docbook
@@ -12,7 +12,7 @@ fellow developers.
 Having a good model of your software is the best way to communicate with
 other developers working on the project and with your customers. A good model
 is extremely important for medium and big-size projects, but it is also very useful
-for small ones. Even if you are working on a small one man project, you
+for small ones. Even if you are working on a small one man project you
 will benefit from a good model because it will give you an overview that will help
 you code things right the first time.
 </para>
