--- a/doc/authors.docbook
+++ b/doc/authors.docbook
@@ -13,8 +13,8 @@ types of &UML; Diagrams, Code Generation and Code Import just to name a few.
 </para>
 <para>
 Paul had to retire from the development team in Summer 2002 but, as Free and Open Source Software, the
-program continues to improve and evolve, and is being maintained by a group of developers from different
-parts of the world. Also, in September 2002, the project changed its name from <application>&UML; Modeller</application>, to
+program continues to improve and evolve and is being maintained by a group of developers from different
+parts of the world. In September 2002 the project changed its name from <application>&UML; Modeller</application>, to
 &umbrello;. There are several reasons for the change of names, the most
 important ones being that just <quote>uml</quote> &mdash; as it was commonly known &mdash; was a much too generic name
 and caused problems with some distributions. The other important reason is that the developers think
@@ -22,7 +22,7 @@ and caused problems with some distributions. The other important reason is that 
 </para>
 <para>
 The development of &umbrello; as well as discussions as to where the program should head for future versions
-is open and takes place over the Internet. If you would like to contribute to the project, please don't
+is open and takes place over the Internet. If you would like to contribute to the project, please do not
 hesitate to contact the developers. There are many ways in which you can help &umbrello;:
 </para>
 <itemizedlist>
