CVS_SILENT fix type (#75935)
svn path=/trunk/kdesdk/doc/umbrello/; revision=290843

--- a/doc/uml_basics.docbook
+++ b/doc/uml_basics.docbook
@@ -4,7 +4,7 @@
 <title>About &UML;</title>
 <para>
 This chapter will give you a quick overview of the basics of &UML;. Keep in mind
-that this is not a comprehensive tutorial on &UML; but rather a brief introducation to &UML; which can be read as a &UML; tutorial. 
+that this is not a comprehensive tutorial on &UML; but rather a brief introduction to &UML; which can be read as a &UML; tutorial. 
 If you would like to learn more about the
 Unified Modelling Language, or in general about software analysis and design, refer to one of the
 many books available on the topic. There are also a lot of tutorials on the Internet which you
