--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+Version 1.3-alpha (cvs-head, change this to 1.3 when released)
+
+* New diagram command 'Duplicate' permits the copying of diagram
+  objects including their features
+
+* New association type: Containment (circle-plus.)
+
+* Operation parameters have a 'kind' which documents whether they are
+  input or return values (in, out, inout)
+
+* Improvements to scaled printing.
+
+* Bugs fixed / wishes implemented (see http://bugs.kde.org)
+53383 55238 57664 68441 71281 71805 72016 72615 72617 73042
+73139 73275 73277 73278 73418 73521 73926 73975 74432 74820
+75111 75318 75380 75582 75789 75935 76506 77367 78192 78525
+78912 
+
+
 Version 1.2
 
 * Canvas zoom
