--- a/ChangeLog
+++ b/ChangeLog
@@ -6,18 +6,30 @@ Version 1.3-alpha (cvs-head, change this to 1.3 when released)
 * New association type: Containment (circle-plus.)
 
 * Operation parameters have a 'kind' which documents whether they are
-  input or return values (in, out, inout)
+  input or return values (in, out, inout.)
+  The IDL and Ada generators use this in their generated code.
 
 * Ability to show only public methods/members in diagram.
 
 * Improvements to scaled printing.
 
+* Crisp new icons
+
+* Improved XMI standard conformance of the file format.
+  In prinnciple, Umbrello's XMI parser is now capable of
+  reading foreign XMI files.
+
+* Improved compatibility with old umbrello files
+
+* Support for repeatedly importing the same C++ file(s)
+
 * Bugs fixed / wishes implemented (see http://bugs.kde.org)
-53361 53383 55238 57664 68441 71281 71805 72016 72615 72617
-72971 73042 73139 73274 73275 73277 73278 73418 73521 73926
-73975 74432 74820 75111 75318 75380 75582 75789 75935 76114
-76209 76506 77367 78192 78317 78525 78806 78910 78912 79180
-79188 79631 79883 80119
+53361 53383 55238 56184 57664 66508 68441 71281 71805 72016
+72615 72617 72971 73042 73139 73274 73275 73277 73278 73418
+73521 73926 73975 74432 74820 75111 75318 75380 75582
+75789 75935 76114 76209 76506 77367 78192 78317 78525 78806
+78910 78912 79180 79188 79631 79883 80119 80299 80824 80913
+80999 81068
 
 
 Version 1.2
