--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
-There is all ways something to do for Umbrello UML Modeller. You can find an
-up to date list of remaining bugs in the bug tracker system at:
+There is always something to do for Umbrello UML Modeller. You can find an
+up-to-date list of remaining bugs in the bug tracker system at:
 
 http://bugs.kde.org/
 
-If you don't like chasing a bug you can add an incredible new feature. To get
+If you do not like chasing bugs you can add an incredible new feature. To get
 an idea what might be good feature look at the feature tracker system:
 
 http://bugs.kde.org/
@@ -13,10 +13,9 @@ Umbrello developer's mailing list:
 
 uml-devel@lists.sourceforge.net
 
-So if you want to translate Umbrello to another language feel free to contact
-the developers as well.  A translation HOWTO is at:
+If you want to translate Umbrello to another language please join the relevant KDE translation team:
 
-http://uml.sf.net/translations.php
+http://i18n.kde.org/
 
 Finally, to get an overview look at the home page:
 
