patch by Achim Spangler:
I found the reason for the high CPU load - and fixed it.

Detect:
Simply check with kdbg where the operation is currently, if the program is
interrupted in invisible-state.

=> always something with Qt update events
As I have this high load only with a lot of diagrams, the QCanvas and
QCanvasView classes were suspectible.

Solution:
Switch the update OFF for the QCanvas of a hidden diagram
( QT-Doc states for QCanvas::setUpdatePeriod()
  "If ms is less than 0 automatic updating will be stopped. " ),
and switch it back to ON on show event.

Result:
Now even my large project is at a very low CPU load!

Now the work with my project is again smart and quick.

##
Changes:
UMLView::init() :
---------------------
Switch update OFF, as this is started by show event.
( Change call of "canvas() -> setUpdatePeriod( 20 );"
   to "canvas() -> setUpdatePeriod( -1 );" )


UMLView::showEvent(QShowEvent* /*se*/) :
----------------------------------------------------------
Start update again with the well working rate of 20msec.
Call "canvas() -> setUpdatePeriod( 20 );" immediately after
"canvas()->setDoubleBuffering( true );"


UMLView::hideEvent(QHideEvent* /*he*/) :
--------------------------------------------------------
Stop update again with "-1" as update rate.
Call "canvas() -> setUpdatePeriod( -1 );" immediately after
"canvas()->setDoubleBuffering( false );"

svn path=/trunk/kdesdk/umbrello/; revision=331976

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 Version 1.3
 
+* heavily reduced memory usage and CPU load on large projects
+
 * reserved keywords added for supported languages
 
 * new tools for aligning several objects
