--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.4
+
+* Bugs fixed / wishes implemented (see http://bugs.kde.org)
+86083
+
+
 Version 1.3
 
 * heavily reduced memory usage and CPU load on large projects
