patch by Laurent Bardi <laurent.Bardi@ipbs.fr>: - add missing newline before "=back" - add missing newline before "=cut" - add missing "=cut" before the "1;" of end module - fix pod2html output (run: pod2html --infile foo.pm --outfile foo.html)   - add default Perl datatypes
CCMAIL: laurent.Bardi@ipbs.fr

svn path=/trunk/kdesdk/umbrello/; revision=339228

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 Version 1.4
 
+* fixed many issues in Perl code generator 
+
 * Bugs fixed / wishes implemented (see http://bugs.kde.org)
 86083 87111
 
