--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,10 @@ Version 1.4
 
 * fixed many issues in Perl code generator 
 
+* added code generator for PHP5
+
 * Bugs fixed / wishes implemented (see http://bugs.kde.org)
-86083 87111
+86083 86952 86958 87111 87537 88152 88245 89699
 
 
 Version 1.3
