Fix beastie 89563: not marked as modified when renaming diagram in listview based on patch from Jean Vittor but extended to all items in list view
svn path=/trunk/kdesdk/umbrello/; revision=364773

--- a/THANKS
+++ b/THANKS
@@ -14,3 +14,4 @@ Some ideas for people wanting to contribute to Umbrello:
 People who have contributed to Umbrello 1.4
 
  * Tobias Koenig - fix crashes caused by lack of code generator
+ * Jean Vittor - fix not marked as modified when renaming diagram in listview
