oops, forgot Gustavo
svn path=/trunk/kdesdk/umbrello/; revision=364797

--- a/THANKS
+++ b/THANKS
@@ -33,6 +33,7 @@ Oliver Kellogg <okellogg @users.sourceforge.net>
 Tobias Koenig <tokoe @kde.org>
 Piotr Kolaczkowski <P.Kolaczkowski @elka.pw.edu.pl>
 Thorsten Kunz <tk @bytecrash.net>
+Gustavo Madrigal <gmadrigal @nextphere.com>
 martin <mv123q3 @hotmail.com>
 Laurent Montel <montel @kde.org>
 Heiko Nardmann <heiko.nardmann @onlinehome.de>
@@ -51,3 +52,4 @@ Jean Vittor <jean.vittor @wanadoo.fr>
 Stefan Walter <sw @gegenunendlich.de>
 Maciej J. Woloszyk <mat @esi.com.pl>
 Tobias Wulff <Tobias-Wulff @codeeye.de>
+
