--- a/ChangeLog
+++ b/ChangeLog
@@ -3,20 +3,22 @@ Version 1.4
 * Entity relationship diagrams
 
 * Tabbed diagrams
-	
+
 * Object creation message in sequence diagram
-	
+
 * Ability to directly type into Note
 
+* Notes can contain diagram hyperlinks
+
 * Move canvas items using the keyboard (Alt + arrow keys)
-	
+
 * PHP 5 code generator
-	
+
 * fixed many issues in Perl code generator 
-	
+
 * Bugs fixed / wishes implemented (see http://bugs.kde.org)
 53380 53384 54928 57879       62321 63316 67062 67723 71978
-74249 74952 77645       80405 80559 82342 85377 86083 86828
+74249 74952 75010 77645 80405 80559 82342 85377 86083 86828
 86952 86958 87111 87537 87956 87995 88152 88245 88415 88954
 89334 89485 89553 89563 89579 89582 89699 89860 89903      
 90102 90106 90206 90755 91298 91433 91434 91494 91869 91922
