CORBA IDL import is for real now.
svn path=/trunk/kdesdk/umbrello/; revision=386241

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,7 +10,9 @@ Version 1.4
 
 * Move canvas items using the keyboard (Alt + arrow keys)
 
-* Improved suport for parameterized classes
+* Improved support for parameterized classes
+
+* CORBA IDL import
 
 * PHP 5 code generator
 
