add M. Kretz and A. Fischer
svn path=/trunk/kdesdk/umbrello/; revision=397050

--- a/THANKS
+++ b/THANKS
@@ -23,6 +23,7 @@ Raymond Bosman <bosman @hetnet.nl>
 Albert Cervera <albertca @jazzfree.com>
 Albert Astals Cid <tsdgeos @terra.es>
 Vincent Decorges <vincent.decorges @eivd.ch>
+Andi Fischer <andi.fischer @hispeed.ch>
 Pascal Fleury <fleury @users.sourceforge.net>
 Esben Mose Hansen <esben @despammed.com>
 Michel Hermier <michel.hermier @wanadoo.fr>
@@ -32,6 +33,7 @@ Klas Kalass  <klas.kalass @gmx.de>
 Oliver Kellogg <okellogg @users.sourceforge.net>
 Tobias Koenig <tokoe @kde.org>
 Piotr Kolaczkowski <P.Kolaczkowski @elka.pw.edu.pl>
+Matthias Kretz <kretz @kde.org>
 Thorsten Kunz <tk @bytecrash.net>
 Gustavo Madrigal <gmadrigal @nextphere.com>
 martin <mv123q3 @hotmail.com>
