--- a/THANKS
+++ b/THANKS
@@ -20,6 +20,7 @@ Laurent Bardi <laurent.Bardi @ipbs.fr>
 Zoltan Bartko <bartko.zoltan @pobox.sk>
 Luis De la Parra Blum <lparrab @gmx.net>
 Raymond Bosman <bosman @hetnet.nl>
+Ben Burton <bab @debian.org>
 Albert Cervera <albertca @jazzfree.com>
 Albert Astals Cid <tsdgeos @terra.es>
 Vincent Decorges <vincent.decorges @eivd.ch>
