--- a/THANKS
+++ b/THANKS
@@ -39,6 +39,7 @@ Thorsten Kunz <tk @bytecrash.net>
 Gustavo Madrigal <gmadrigal @nextphere.com>
 martin <mv123q3 @hotmail.com>
 Laurent Montel <montel @kde.org>
+Lutz Mueller <lutz.mueller @gmx.de>
 Heiko Nardmann <heiko.nardmann @onlinehome.de>
 Carsten Pfeiffer <pfeiffer @kde.org>
 Ivan Porres <iporres @abo.fi>
