--- a/THANKS
+++ b/THANKS
@@ -28,6 +28,7 @@ Andi Fischer <andi.fischer @hispeed.ch>
 Pascal Fleury <fleury @users.sourceforge.net>
 Esben Mose Hansen <esben @despammed.com>
 Michel Hermier <michel.hermier @wanadoo.fr>
+Paul Hensgen <phensgen @bigpond.net.au>
 David Hugh-Jones <hughjonesd @yahoo.co.uk>
 Pekka J‰‰skel‰inen <pjaaskel @cs.tut.fi>
 Klas Kalass  <klas.kalass @gmx.de>
