--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Version 1.4.1 (maintenance release)
+
+Bugs fixed:
+* Crash on deleting attributes / enum literals
+* Crash in UMLView::createAutoAttributeAssociations()
+* Bugs from http://bugs.kde.org :
+53376 57667 57875 95353 100290 100307 101148 103123 103133 103728
+101541
+
 Version 1.4
 
 * Entity relationship diagrams
@@ -28,7 +37,7 @@ Version 1.4
 92781 92995 93122 93219 93297 93298 93501 93535 93696 94173
 94728 94795 94883 95082 95247 95252 95722 95924 95951 95954
 96216 96221 96964 97155 97182 97697 97887 97984 98603 98899
-99697
+ 99697 100142
 
 Version 1.3
 
