--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
 Version 1.5
 
+* Association classes
 * Externalization of folders (i.e. submodel files)
 
 * Bugs fixed / wishes implemented (see http://bugs.kde.org)
-87252 
+57588 87252
 
 Version 1.4.1 (maintenance release)
 
@@ -11,8 +12,8 @@ Bugs fixed:
 * Crash on deleting attributes / enum literals
 * Crash in UMLView::createAutoAttributeAssociations()
 * Bugs from http://bugs.kde.org :
-53376 57667 57875 80924 89691 95353 100290 100307 101148 103123
-103133 103728 101541
+ 53376  57667  57875  70924  80924  89691  95353 100290 100307 101148
+103123 103133 103728 101541
 
 Version 1.4
 
