--- a/ChangeLog
+++ b/ChangeLog
@@ -2,10 +2,10 @@ Version 1.5
 
 * Association classes
 * Externalization of folders (i.e. submodel files)
-* Change interface into class and vice versa (if no attributes)
+* Change interface into class and vice versa (if abstract and no attributes)
 
 * Bugs fixed / wishes implemented (see http://bugs.kde.org)
-57588 79433 87252 105564
+57588 79433 87252 88117 105564
 
 Version 1.4.1 (maintenance release)
 
