Patch from Jean-Remy Falleri <jr.falleri_AT_gmail.com> adds abstract usecases. BUG:67719
svn path=/trunk/KDE/kdesdk/umbrello/; revision=418526

--- a/THANKS
+++ b/THANKS
@@ -24,6 +24,7 @@ Ben Burton <bab @debian.org>
 Albert Cervera <albertca @jazzfree.com>
 Albert Astals Cid <tsdgeos @terra.es>
 Vincent Decorges <vincent.decorges @eivd.ch>
+Jean-Remy Falleri <jr.falleri @gmail.com>
 Andi Fischer <andi.fischer @hispeed.ch>
 Pascal Fleury <fleury @users.sourceforge.net>
 Esben Mose Hansen <esben @despammed.com>
