--- a/THANKS
+++ b/THANKS
@@ -28,6 +28,7 @@ Jean-Remy Falleri <jr.falleri @gmail.com>
 Andi Fischer <andi.fischer @hispeed.ch>
 Pascal Fleury <fleury @users.sourceforge.net>
 Esben Mose Hansen <esben @despammed.com>
+Olaf Hartig <OleBowle @gmx.de>
 Michel Hermier <michel.hermier @wanadoo.fr>
 Paul Hensgen <phensgen @bigpond.net.au>
 David Hugh-Jones <hughjonesd @yahoo.co.uk>
