--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.4.2 (maintenance release)
+
+* Bugs fixed from http://bugs.kde.org :
+72016 103170 106356 106632 106673
+
 Version 1.4.1 (maintenance release)
 
 Bugs fixed:
