Patch by Paulo Sehn fixes BUG:97188 . Many thanks.
svn path=/trunk/KDE/kdesdk/umbrello/; revision=434174

--- a/THANKS
+++ b/THANKS
@@ -50,6 +50,7 @@ John Ratke <jratke @comcast.net>
 Daniel Richard G. <skunk @iskunk.org>
 Jonathan Riddell <jr @jriddell.org>
 Peeter Russak <pezz @tkwcy.ee>
+Paulo Roberto Rodriguez Sehn <paulo.sehn @gmail.com>
 Achim Spangler <Achim.Spangler @mnet-online.de>
 Sebastian Stein <seb.stein @gmx.de>
 Andrew Sutton <asutton @cs.kent.edu>
