--- a/THANKS
+++ b/THANKS
@@ -20,29 +20,39 @@ Laurent Bardi <laurent.Bardi @ipbs.fr>
 Zoltan Bartko <bartko.zoltan @pobox.sk>
 Luis De la Parra Blum <lparrab @gmx.net>
 Raymond Bosman <bosman @hetnet.nl>
+Ben Burton <bab @debian.org>
 Albert Cervera <albertca @jazzfree.com>
 Albert Astals Cid <tsdgeos @terra.es>
 Vincent Decorges <vincent.decorges @eivd.ch>
+Jean-Remy Falleri <jr.falleri @gmail.com>
+Andi Fischer <andi.fischer @hispeed.ch>
 Pascal Fleury <fleury @users.sourceforge.net>
+Gregorio Guidi <g.guidi @sns.it>
 Esben Mose Hansen <esben @despammed.com>
+Olaf Hartig <OleBowle @gmx.de>
 Michel Hermier <michel.hermier @wanadoo.fr>
+Paul Hensgen <phensgen @bigpond.net.au>
 David Hugh-Jones <hughjonesd @yahoo.co.uk>
 Pekka J‰‰skel‰inen <pjaaskel @cs.tut.fi>
 Klas Kalass  <klas.kalass @gmx.de>
 Oliver Kellogg <okellogg @users.sourceforge.net>
 Tobias Koenig <tokoe @kde.org>
 Piotr Kolaczkowski <P.Kolaczkowski @elka.pw.edu.pl>
+Matthias Kretz <kretz @kde.org>
 Thorsten Kunz <tk @bytecrash.net>
 Gustavo Madrigal <gmadrigal @nextphere.com>
 martin <mv123q3 @hotmail.com>
 Laurent Montel <montel @kde.org>
+Lutz Mueller <lutz.mueller @gmx.de>
 Heiko Nardmann <heiko.nardmann @onlinehome.de>
 Carsten Pfeiffer <pfeiffer @kde.org>
 Ivan Porres <iporres @abo.fi>
+Ruediger Ranft <kdebugs @rranft1.mail.htwm.de>
 John Ratke <jratke @comcast.net>
 Daniel Richard G. <skunk @iskunk.org>
 Jonathan Riddell <jr @jriddell.org>
 Peeter Russak <pezz @tkwcy.ee>
+Paulo Roberto Rodriguez Sehn <paulo.sehn @gmail.com>
 Achim Spangler <Achim.Spangler @mnet-online.de>
 Sebastian Stein <seb.stein @gmx.de>
 Andrew Sutton <asutton @cs.kent.edu>
