Patch by Leo Savernik removes gratuitous dependence on exception handling.
svn path=/trunk/KDE/kdesdk/umbrello/; revision=437687

--- a/THANKS
+++ b/THANKS
@@ -55,6 +55,7 @@ Jonathan Riddell <jr @jriddell.org>
 Peeter Russak <pezz @tkwcy.ee>
 Paulo Roberto Rodriguez Sehn <paulo.sehn @gmail.com>
 Achim Spangler <Achim.Spangler @mnet-online.de>
+Leo Savernik <l.savernik @aon.at>
 Sebastian Stein <seb.stein @gmx.de>
 Andrew Sutton <asutton @cs.kent.edu>
 Tanuj <tagrawal @hss.hns.com>
