--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,12 @@
 Version 1.5
 
 * Association classes
+* Advanced code generator for Ruby
 * Externalization of folders (i.e. submodel files)
 * Change interface into class and vice versa (if abstract and no attributes)
 
 * Bugs fixed / wishes implemented (see http://bugs.kde.org)
-57588 67719 79433 87252 88117 105564 108223
+57588 67719 79433 87252 88117 97162 105564 108223 109591
 
 Version 1.4.2 (maintenance release)
 
