--- a/THANKS
+++ b/THANKS
@@ -43,6 +43,7 @@ Matthias Kretz <kretz @kde.org>
 Thorsten Kunz <tk @bytecrash.net>
 Gustavo Madrigal <gmadrigal @nextphere.com>
 martin <mv123q3 @hotmail.com>
+Rene Meyer <Rene.Meyer @sturmit.de>
 Laurent Montel <montel @kde.org>
 Lutz Mueller <lutz.mueller @gmx.de>
 Heiko Nardmann <heiko.nardmann @onlinehome.de>
