Patch from Alan Ezust adds image export via command line. I have not yet tested this stuff; can we close the PR? CCBUG:58809
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=443195

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,10 +5,11 @@ Version 1.5
 * Code generator for Tcl
 * Externalization of folders (i.e. submodel files)
 * Change interface into class and vice versa (if abstract and no attributes)
+* Image export via command line
 * Automatic Diagram Layout (67059, not yet closed)
 
 * Bugs fixed / wishes implemented (see http://bugs.kde.org)
-57588 67719 72016 79433 87252 88117 97162 105564 108223 109591 109636
+57588 58809 67719 72016 79433 87252 88117 97162 105564 108223 109591 109636
 
 Version 1.4.2 (maintenance release)
 
