--- a/THANKS
+++ b/THANKS
@@ -25,6 +25,7 @@ Albert Cervera <albertca @jazzfree.com>
 Albert Astals Cid <tsdgeos @terra.es>
 Richard Dale <duke @tipitina.demon.co.uk>
 Vincent Decorges <vincent.decorges @eivd.ch>
+Alan Ezust <alan.ezust @gmail.com>
 Jean-Remy Falleri <jr.falleri @gmail.com>
 Andi Fischer <andi.fischer @hispeed.ch>
 Pascal Fleury <fleury @users.sourceforge.net>
@@ -47,6 +48,7 @@ Rene Meyer <Rene.Meyer @sturmit.de>
 Laurent Montel <montel @kde.org>
 Lutz Mueller <lutz.mueller @gmx.de>
 Heiko Nardmann <heiko.nardmann @onlinehome.de>
+Dimitri Ognibene <ognibened @yahoo.it>
 Carsten Pfeiffer <pfeiffer @kde.org>
 Ivan Porres <iporres @abo.fi>
 Ruediger Ranft <kdebugs @rranft1.mail.htwm.de>
